# coding-cli-session-sync

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_HANDOFF.md  PROJECT_LOG.md  README.md  cleanup_session.py  export_session.py  import_session.py  pyproject.toml  setup.sh
session_sync/: __init__.py  cleanup_session.py  core.py  export_session.py  file_lock.py  import_session.py  ui.py  utils.py
tests/: __init__.py  benchmark_discovery.py  test_archive_security.py  test_claude_selective.py  test_cleanup.py  test_codex_paths.py  test_core.py  test_export.py  test_file_lock.py  test_import.py  test_opencode_full_export.py  test_performance_regression.py  test_tool_support.py
